# SummerEngine

./: .gitignore  CMakeLists.txt  CurrentProject.txt
engine/: .gitignore  CMakelists.txt
engine/include/components/: Animation.h  CAcceleration.h  CAnimation.h  CCircleShape.h  CCollidable.h  CDynamic.h  CGameLogic.h  CMovable.h  CPhysics2d.h  CPosition.h  CRectangleShape.h  CShape.h  CTexture.h  CTransform.h  CTransform2D.h  CTransformable.h  CTriangleShape.h  CVelocity.h  Component.h  ComponentDictionary.h  NullComponent.h
engine/include/core/: Camera.h  DebugRender.h  Dictionaries.h  EditorRender.h  Engine.h  GameLogic.h  GameRender.h  Graphics.h  JsonFilesStructures.h  MapCreator.h  MapEditor.h  Messages.h  Messenger.h  Render.h  RenderBatch.h  SE_exceptions.h  Tile.h  TileSheet.h  Window.h  file_folder_json_data.h  gui_values.h
engine/include/events/: EditorEvents1.h  EngineEvents1.h  EngineEvents2.h  EngineEvents3.h  EngineEvents4.h  EventHandler.h  Events.h  SE_Event.h  ToBeSortedEvents.h
engine/include/gamelogic/: GameLogic.h
engine/include/gui/: CAnimationEditor.h  CCollidableEditor.h  CDynamicEditor.h  CGameLogicEditor.h  CShapeEditor.h  CTextureEditor.h  CTransformableEditor.h  CompEditorGui.h  EngineGui.h  GraphicalUserInterface.h  GuiCompMgr.h  GuiEntityMgr.h  GuiMapEditor.h  GuiSceneMgr.h  ManagerGui.h  MapEditor.h  SystemGui.h  gui_values.h
engine/include/ids/: ComponentIDList.h  ComponentTypeList.h  SystemAndManagerIDList.h
engine/include/managers/: Batch.h  ComponentManager.h  Entity.h  EntityComponentManager.h  EntityManager.h  EventHandler.h  EventManager.h  IOLowLevelInputBinding.h  IOManager.h  Keyboard.h  Manager.h  Mouse.h  RenderManager.h  Resource.h  ResourceManager.h  SE_Event.h  Scene.h  SceneManager.h
engine/include/renderers/: Camera.h  DebugRender.h  EditorRender.h  GameRender.h  Render.h  RenderBatch.h
engine/include/systems/: AnimationSystem.h  CollisionSystem.h  CompSystemEventHandler.h  ComponentSystem.h  DummySystemCPP.txt  GameLogicSystem.h  MovementSystem.h  PositionSystem.h  RenderSystem.h  System.h  TransformSystem.h
engine/include/user/: ComponentList.h
engine/include/utility/: Clock.h  EditorFunctions.h  JsonUtilFunctions.h  Math.h  Messager.h  Messenger.h  Time.h  Typedefs.h
engine/json_files/: components.json  engine_config.json  engine_config.txt  entities.json  scenes.json  shader_config.json
engine/shaders/: debug_rend.frag  debug_rend.vert  defaultShader.frag  defaultShader.vert  test.frag  test.vert
engine/src/: main.cpp
engine/src/components/: Animation.cpp  CCircleShape.cpp  CPhysics2D.cpp  CRectangleShape.cpp  CShape.cpp  CTransform.cpp  CTransform2D.cpp  CTriangleShape.cpp  Component.cpp  NullComponent.cpp
engine/src/core/: Camera.cpp  DebugRender.cpp  Dictionaries.cpp  EditorRender.cpp  Engine.cpp  GameRender.cpp  Graphics.cpp  MapCreator.cpp  MapEditor.cpp  Messenger.cpp  Window.cpp  gui_values.cpp  imgui_impl_sdl_gl3.cpp
engine/src/events/: EventHandler.cpp
engine/src/gui/: CAnimationEditor.cpp  CCollidableEditor.cpp  CDynamicEditor.cpp  CGameLogicEditor.cpp  CShapeEditor.cpp  CTextureEditor.cpp  CTransformableEditor.cpp  CompEditorGui.cpp  EngineGui.cpp  GraphicalUserInterface.cpp  GuiCompMgr.cpp  GuiEntityMgr.cpp  GuiMapEditor.cpp  GuiSceneMgr.cpp  ManagerGui.cpp  MapEditor.cpp  SystemGui.cpp  gui_values.cpp  imgui_impl_sdl_gl3.cpp
engine/src/managers/: Batch.cpp  ComponentManager.cpp  Entity.cpp  EntityComponentManager.cpp  EntityManager.cpp  EventHandler.cpp  EventManager.cpp  IOManager.cpp  Keyboard.cpp  Mouse.cpp  RenderManager.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp
engine/src/renderers/: Camera.cpp  DebugRender.cpp  EditorRender.cpp  GameRender.cpp  Render.cpp  RenderBatch.cpp
engine/src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  CompSystemEventHandler.cpp  ComponentSystem.cpp  GameLogicSystem.cpp  MovementSystem.cpp  MovementSystemUiImpl.cpp  PositionSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
engine/src/utility/: Clock.cpp  EditorFunctions.cpp  Time.cpp
executables/Debug/: engine_gui_conf.ini  imgui.ini
libs/: OpenGL32.Lib  box2d.lib
libs/Debug/: SDL2.lib  SDL2main.lib  box2d.lib
libs/MinSizeRel/: SDL2.lib  SDL2main.lib
libs/RelWithDebInfo/: SDL2main.lib  box2d.lib
libs/Release/: SDL2.lib  SDL2main.lib  box2d.lib
projects/: README.txt
projects/SummerGame/data/: CMakeLists.txt  components.json  entities.json  msg_crash_dump.txt  scenes.json
projects/SummerGame/data/entity_templates/: bulletNoColl_template.json  bullet_template.json  fixed_template.json  kalel_template.json  qwe_template.json
projects/SummerGame/data/resources/animations/: player_running_down.json  player_running_left.json  player_running_rigth.json  player_running_up.json
projects/SummerGame/data/resources/gamelogic/: AddLogicToEngine.h  EnemyLogic.cpp  EnemyLogic.h  PlayerLogic.cpp  PlayerLogic.h
projects/SummerGame/data/resources/scripts/: ScriptDeclarations.h  ShootProjectile.cpp
projects/SummerGame/data/resources/textures/: developerREADME.txt
projects/SummerGame/data/resources/userevents/: UserEvents1.h  UserEvents2.h  UserEvents3.h  UserEvents4.h
projects/SummerGame/data/scenes/: Level-1.json  Te.json  Test.json  Testi2.json  Tst.json  aqew.json  asd.json  endgame.json  level1.json  level2.json  level3.json  main_menu.json  qwe.json  rhfgh.json  scenenamelist  scenenamelist.json  start.json  testi.json  uusje.json
projects/example_project/: developerREADME.txt
projects/example_project/data/: engine_config.json
projects/example_project/data/scenes/: scenenamelist.json
